# machine-learning

./: .gitignore  README.md  pyproject.toml
movie-fake-rating-data-analysis-project/: README.md  pyproject.toml
movie-fake-rating-data-analysis-project/analysis/: all_sites.ipynb  fandango_analysis.ipynb  matching.ipynb  summary.ipynb
movie-fake-rating-data-analysis-project/scripts/: analyze_fandango.py
