[project]
name = "movie-fake-rating-data-analysis-project"
version = "0.1.0"
description = ""
authors = [
    {name = "ilya.chernyavskiy",email = "ilya.chernyavskiy@idfeurasia.pro"}
]
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
